--- a/week2/style.css
+++ b/week2/style.css
@@ -1,7 +1,157 @@
-h1 {
-    color: brown;
-  }
+* {
+  box-sizing:border-box;
+}
 
-img {
-  object-fit : cover;
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'East Sea Dokdo', cursive;
+  font-family: 'Gowun Dodum', sans-serif;
+}
+
+h1, ul {
+  font-family: 'Gowun Batang', serif;
+}
+
+h3 {
+  float: middle;
+}
+
+a:link, a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.container {
+  width: 960px;
+  margin: 0 auto;
+}
+
+
+nav {
+  height: 60px;
+  line-height:60px;
+}
+
+nav::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.nav-logo {
+  font-size: 30px;
+  float: left;
+  margin: 0;
+}
+
+.nav-menu {
+  float: right;
+}
+
+.nav-btn {
+  list-style-type: none;
+  margin: 0;
+}
+
+ul.nav-btn > li {
+  float: left;
+  margin-left:25px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+
+/* header */
+.hd {
+  position:relative;
+  height: 600px;
+  text-align: center;
+}
+
+.hd-title {
+  font-size: 80px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  padding-top: 200px;
+}
+
+.hd-content {
+  font-size: 25px;
+}
+
+.hd:before {
+  content:"";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
+
+.hd .container {
+  position: relative;
+  color: black;
+}
+
+.hd-img {
+  float: left;
+}
+
+.hd-explain {
+  text-align: middle;
+}
+
+
+/* section */
+.sec {
+  text-align: center;
+  padding: 100px 0;
+  background-color: beige;
+}
+.sec p {
+  text-align: middle;
+}
+.sec article {
+  float:left;
+  width: 300px;
+  margin-right: 30px;
+}
+
+.sec article:last-child {
+  margin-right:0;
+}
+
+.sec article img {
+  width: 100%;
+  height: auto;
+}
+
+.card-img {
+  overflow: hidden;
+  width: 300px;
+  height: 300px;
+}
+
+.sec:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.sec buk {
+  font-family: 'Gowun Batang', serif;
+}
+
+.sec playlist {
+  font-family: 'Gowun Batang', serif;
+}
+
+/* footer */
+
+.ft {
+  text-align: right;
 }
